--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,10 +13,6 @@ header h1 {
  margin: 3rem;
 }
 
-header a {
-  text-decoration: line-through;
-}
-
 section {
   width: 100%;
   display: grid;
@@ -46,4 +42,9 @@ article p:nth-of-type(1) {
 article p:nth-of-type(2) {
   font-size: 0.9rem;
   color: #343434;
+}
+
+.snotty-h4 {
+  text-align: center;
+  color: #B0D068;
 }
