--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,46 +1,54 @@
 body {
-  font-family: sans-serif;
+    font-family: sans-serif;
+    background-color: #5E26A7;
+}
+
+a {
+    color: #FFE444;
 }
 
 header {
-  text-align: center;
-  text-transform: capitalize;
-}
-
-header h1 {
-  font-weight: 900;
-  margin: 3rem;
+    text-align: center;
+    text-transform: capitalize;
+    h1 {
+        font-weight: 900;
+        margin: 3rem;
+    }
 }
 
 section {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 0rem 1rem;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 0rem 1rem;
 }
 
 article {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  padding: 0.75rem 0.5rem;
-  box-shadow: 0 0 3px -1px hsl(215, 29%, 35%);
-}
-
-article h2 {
-  font-size: 1.5rem;
+    display: flex;
+    margin-top: 1rem;
+    align-items: center;
+    flex-direction: column;
+    padding: 0.75rem 0.5rem;
+    box-shadow: 0 0 3px -1px #000000;
+    h2 {
+        color: #FFFFFF;
+        font-size: 1.5rem;
+    }
 }
 
 article p:nth-of-type(1) {
-  font-size: 3.5rem;
-  font-weight: 900;
+    font-size: 3.5rem;
+    font-weight: 900;
+    color: #FFE444;
 }
 
 article p:nth-of-type(2) {
-  font-size: 0.9rem;
+    font-size: 0.9rem;
+    color: #DBCDDA;
 }
 
 .snotty-p {
-  text-align: center;
+    text-align: center;
+    color: #99CCAE;
 }
 
