--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,8 +11,12 @@ header {
     text-align: center;
     text-transform: capitalize;
     h1 {
+        font-size: 3em;
         font-weight: 900;
         margin: 3rem;
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke: 1px;
+        color: white;
     }
 }
 
@@ -30,6 +34,7 @@ article {
     flex-direction: column;
     padding: 0.75rem 0.5rem;
     box-shadow: 0 0 3px -1px #000000;
+    border-radius: 2%;
     h2 {
         color: #FFFFFF;
         font-size: 1.5rem;
@@ -50,5 +55,15 @@ article p:nth-of-type(2) {
 .snotty-p {
     text-align: center;
     color: #99CCAE;
+}
+
+@media (max-width: 768px) {
+    header h1 {
+        font-size: 2.4em;
+    }
+
+    section {
+        grid-template-columns: 1fr;
+    }
 }
 
