Change header color

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,7 +19,7 @@ header {
         margin: 3rem;
         -webkit-text-fill-color: transparent;
         -webkit-text-stroke: 1px;
-        color: white;
+        color: #DBCDDA;
     }
 }
 
